src/CSS/articleCard.css
.article-card {
  width: 95vw;
  margin: 10px;
}

.article-card-body {
  display: grid;
  grid-template-columns: 20% 80%;
}

.article-card-image {
  max-height: auto;
  max-width: 80%;
  grid-column-start: 1;
  border: 1px solid white;
  border-radius: 25px;
}

.with-image {
  grid-column-start: 2;
}

.article-card-text {
  overflow-y: hidden;
  max-height: 8em;
  -webkit-mask-image: -webkit-gradient(
    linear,
    left 95%,
    left bottom,
    from(rgba(0, 0, 0, 1)),
    to(rgba(0, 0, 0, 0))
  );
}

.title-div {
  float: left;
}

.article-button-div {
  float: right;
}

.time-div {
  text-align: center;
  float: right;
}

.card-header {
  border-bottom: 1px solid white !important;
}

.card-footer {
  border-top: 1px solid white !important;
}

